GNOME Bugzilla – Bug 700578
Missing vertical grid lines when some columns hidden.
Last modified: 2013-05-18 23:21:32 UTC
Hi, If you enable grid lines for a tree view, all seems to be working until you decide to hide any columns. If you hide any columns, the vertical grid lines start to disappear from the right side by the number of hidden columns. This occurs in Gtk+-2.24.18 and also in Gtk+-3.6.4 The problem function is gtk_tree_view_draw_grid_lines which are almost identical between versions. To fix the problem for Gtk+-2.24.18 I changed the line on 4291 from this, for (list = tree_view->priv->columns; list; list = list->next, i++) to this, for (list = tree_view->priv->columns; list; list = list->next) and added on line 4301 this i++; Similar changes can probably be made for Gtk3.